320px fixes clipping

--- a/app/assets/stylesheets/hero.scss
+++ b/app/assets/stylesheets/hero.scss
@@ -1,5 +1,5 @@
 .hero-top {
-  padding: 20px 10px 300px 10px;
+  padding: 20px 10px 320px 10px;
   color: white;
 }
 
